--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -258,7 +258,7 @@
   // background: #236b9b;
   margin: 0.6em 0;
   padding: 0.7em 1em;
-  border: 1px solid rgb(70, 107, 192);
+  border: 1px solid #466bc0;
   font-weight: bold;
   // color: rgb(250, 250, 250) !important;
   z-index: 1;
@@ -268,9 +268,8 @@
   }
 
   .icon {
-    @extend %left-right-animation;
     font-size: 1rem;
-    margin-left: 0.44em;
+    margin-left: 0.32em;
   }
 }
 
@@ -402,7 +401,8 @@
         // background: #1b7195;
         // background: rgb(0, 36, 51);
         // background: rgb(9, 38, 51);
-        background: b.$bg-header;
+        // background: b.$bg-header;
+        background: b.$bg-main;
         color: rgb(246, 246, 246);
         // color: rgb(250, 250, 250);
         // color: b.$text-white;
