--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -137,7 +137,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 166px;
+    height: 162px;
     background: url('/src/assets/waves2.svg');
     background-size: cover;
     background-position: 100% 33%;
@@ -349,7 +349,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 2em;
     margin: 0.5em 0;
-    // align-items: flex-start;
+    align-items: flex-start;
     // background: rgba(155, 154, 154, 0.15);
 
     @include b.mediaQuery(b.$tablet) {
